# RobotInterfaceOROCOS

./: CMakeLists.txt  README.md
include/RobotInterfaceOROCOS/: RobotInterfaceOROCOS.h  parser.h
src/: RobotInterfaceOROCOS.cpp  parser.cpp
tests/: .tb_history  cogimon_config.yaml  testHomingRobotInterfaceOROCOS.cpp  testRobotInterfaceOROCOS.cpp  testRobotInterfaceOROCOS.ops
